--- a/styles.css
+++ b/styles.css
@@ -28,18 +28,28 @@ body {
 }
 
 .animated-title {
-    font-size: 3em;
+    font-size: 10em;
+    font-family: "luckiest guy";
     color: #4caf50;
-    animation: fadeIn 2s ease-in-out;
+    animation: bounce 1s infinite;
 }
 
-@keyframes fadeIn {
-    from {
-        opacity: 0;
+@keyframes bounce {
+
+    0%,
+    20%,
+    50%,
+    80%,
+    100% {
+        transform: translateY(0);
     }
 
-    to {
-        opacity: 1;
+    40% {
+        transform: translateY(-30px);
+    }
+
+    60% {
+        transform: translateY(-15px);
     }
 }
 
