--- a/styles.css
+++ b/styles.css
@@ -108,9 +108,13 @@ body {
 
 /* Cloud Styles */
 
-/*.cloud-hidden {
+.hidden {
+    display: none;
+}
+
+.dark-mode .cloud-hidden {
     visibility: hidden;
-}*/
+}
 
 .cloud-container1 {
     position: relative;
@@ -192,36 +196,9 @@ body {
     z-index: -1;
 }
 
-/*@keyframes moveClouds {
-    0% {
-        transform: translateX(-100%);
-        opacity: 0;
-    }
-
-    10% {
-        opacity: 1;
-    }
-
-    90% {
-        opacity: 1;
-    }
-
-    100% {
-        transform: translateX(100%);
-        opacity: 0;
-    }
-}
-
-.cloud-container svg {
-    animation: moveClouds 60s linear infinite;
-}
-
-/* Example variations for individual clouds */
 #cloud1 {
     top: 0;
     right: 0;
-    animation-duration: 50s;
-    animation-delay: 0s;
     /* Adjust as needed */
     transform: scale(0.3);
     transform-origin: 10px, 10px;
@@ -232,8 +209,6 @@ body {
 #cloud2 {
     top: 100px;
     left: 20%;
-    animation-duration: 70s;
-    animation-delay: 10s;
     transform: scale(0.4);
     transform-origin: 50px 50px;
     /* Makes cloud2 20% smaller */
@@ -242,8 +217,6 @@ body {
 #cloud3 {
     top: 50px;
     left: 30%;
-    animation-duration: 60s;
-    transform: scale(0.6);
     transform-origin: center;
     /* Makes cloud3 40% smaller */
 }
@@ -251,8 +224,6 @@ body {
 #cloud4 {
     top: 150px;
     left: 40%;
-    animation-duration: 80s;
-    animation-delay: 20s;
     transform: scale(0.7);
     transform-origin: left 5px -3px;
     /* Makes cloud4 30% smaller */
@@ -521,14 +492,41 @@ canvas {
     bottom: 0;
     display: none;
     /* Start hidden */
+    opacity: 0;
+    /* Start fully transparent */
+    visibility: hidden;
+    /* Start hidden */
+    transition: opacity 2s ease, visibility 2s ease;
 }
 
 /* Show stars in dark mode */
 .dark-mode .night-sky {
     display: block;
+    opacity: 1;
+    /* Fully visible */
+    visibility: visible;
 }
 
 .dark-mode .star {
     opacity: 1;
+    transition: opacity 2s ease;
     /* Show stars */
+}
+
+/* Night Mode Transition */
+
+/* Apply transitions to opening-text and content-container */
+.opening-text,
+.content-container,
+.animated-title {
+    transition: color 0.5s ease, background-color 0.5s ease, transform 0.5s ease;
+}
+
+/* Example dark mode styles */
+.dark-mode .opening-text,
+.dark-mode .content-container {
+    color: #FFFFFF;
+    /* Assuming white text in dark mode */
+    /* Assuming a darker background in dark mode */
+    /* No change to transform here, but it's set to transition smoothly if changed */
 }
