added styles for "after dark" button

--- a/styles.css
+++ b/styles.css
@@ -530,3 +530,71 @@ canvas {
     /* Assuming a darker background in dark mode */
     /* No change to transform here, but it's set to transition smoothly if changed */
 }
+
+.button-85 {
+    padding: 0.6em 2em;
+    border: none;
+    outline: none;
+    color: rgb(255, 255, 255);
+    background: #111;
+    cursor: pointer;
+    position: relative;
+    z-index: 0;
+    border-radius: 10px;
+    user-select: none;
+    -webkit-user-select: none;
+    touch-action: manipulation;
+    font-family: "Luckiest Guy";
+}
+
+.button-85:before {
+    content: "";
+    background: linear-gradient(45deg,
+            #FFFBFF,
+            #FFFBFF,
+            #FFFBFF,
+            #FFE7FF,
+            #FFE7FF,
+            #FFD6FF,
+            #FFD6FF,
+            #FFD6FF,
+            #FFD6FF);
+    position: absolute;
+    top: -2px;
+    left: -2px;
+    background-size: 400%;
+    z-index: -1;
+    filter: blur(5px);
+    -webkit-filter: blur(5px);
+    width: calc(100% + 4px);
+    height: calc(100% + 4px);
+    animation: glowing-button-85 20s linear infinite;
+    transition: opacity 0.3s ease-in-out;
+    border-radius: 10px;
+}
+
+@keyframes glowing-button-85 {
+    0% {
+        background-position: 0 0;
+    }
+
+    50% {
+        background-position: 400% 0;
+    }
+
+    100% {
+        background-position: 0 0;
+    }
+}
+
+.button-85:after {
+    z-index: -1;
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background: #BDD2FF;
+    left: 0;
+    top: 0;
+    border-radius: 10px;
+}
