--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 :root {
-    --background-image: url('./images/day.img.jpg');
+    --background-image: url('./images/day2.jpg');
 }
 
 
@@ -423,12 +423,12 @@ canvas {
 /* Dark Mode Styles */
 
 .dark-mode .body {
-    background-image: url('./images/night.img');
+    background-image: url('./images/night2.jpg');
 }
 
 .dark-mode {
     color: #E8C7FF;
-    background-image: url('./images/night.img')
+    background-image: url('./images/night2.jpg')
 }
 
 .dark-mode #app {
